Fri Mar 15 19:52:41 UTC 2013  Brian Johnson  <johnsonb@ociweb.com>

        * examples/DCPS/ishapes/BouncingShapeDynamics.cpp:

          Changed coordinates to be center of shape.

        * examples/DCPS/ishapes/ShapesDialog.cpp:

          Fixed filter coordinates.

        * examples/DCPS/ishapes/config.hpp:

          Cleanup of unused #define.

        * examples/DCPS/ishapes/filterForm.ui:

          Fixed coordinates.

        * examples/DCPS/ishapes/Square.cpp:
        * examples/DCPS/ishapes/Triangle.cpp:
        * examples/DCPS/ishapes/Circle.cpp:

          Changed centering of shape.

Wed Mar 13 22:44:14 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/ManyTopicMultiProcess/Foo4Def.idl:

          Refactored to use a TAO built-in type per the OpenDDS faq.

        * tests/DCPS/ManyTopicTypes/ManyTopicTypes.mpc:

          Removed Foo4Def previously added for the ManyTopicMultiProcess test

        * tests/DCPS/ManyTopicTypes/Foo4Def.idl:

          Removed this file.

Wed Mar 13 20:45:37 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/ManyTopicMultiProcess/DataReaderListener4.cpp:

          Resolved signed/unsigned comparison warning

Wed Mar 13 20:05:01 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/ManyTopicMultiProcess/DataReaderListener1.cpp:
        * tests/DCPS/ManyTopicMultiProcess/DataReaderListener4.cpp:
        * tests/DCPS/ManyTopicMultiProcess/Foo1Def.idl:
        * tests/DCPS/ManyTopicMultiProcess/Foo4Def.idl:
        * tests/DCPS/ManyTopicMultiProcess/ManyTopicMultiProcess.mpc:
        * tests/DCPS/ManyTopicMultiProcess/Writer.cpp:
        * tests/DCPS/ManyTopicMultiProcess/manyfoolib_export.h:
        * tests/DCPS/ManyTopicMultiProcess/publisher.cpp:
        * tests/DCPS/ManyTopicMultiProcess/subscriber.cpp:

         Removed dependancy on tests/DCPS/ManyTopicTypes

Tue Mar 12 21:55:35 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * bin/dcps_tests.lst:
