@@ -1,3 +1,13 @@
+Tue Mar 19 20:52:02 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>
+
+        * tests/DCPS/ManyTopicMultiProcess/publisher.cpp:
+
+          Resolve Coverity issues 990925 and 990926
+
+        * tests/DCPS/ManyTopicMultiProcess/subscriber.cpp:
+
+          Resolve Coverity issues 990927-990931
+
 Fri Mar 15 19:52:41 UTC 2013  Brian Johnson  <johnsonb@ociweb.com>
 
         * examples/DCPS/ishapes/BouncingShapeDynamics.cpp:
